objects/ssot__BusinessMilestone__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationDescription__c</fullName>
        <label>Expiration Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Business Milestone Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsExpired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsTentative__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tentative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__MilestoneDate__c</fullName>
        <label>Milestone Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__MilestoneDescription__c</fullName>
        <label>Milestone Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MilestoneSiteId__c</fullName>
        <label>Milestone Site</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MilestoneType__c</fullName>
        <label>Milestone Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Milestone Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PrimaryAccountId__c</fullName>
        <label>Primary Account</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystemIdentifier__c</fullName>
        <label>Source System Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__SourceSystem__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731039808929_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BusinessMilestone_PrimaryAccountId_m_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>BusinessMilestone_PrimaryAccountId_m_rel</relationshipLabel>
        <relationshipName>rel_1731039808929_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1731040466113_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BusinessMilestone_MilestoneSiteId_ma_rel</label>
        <referenceTo>ssot__Location__dlm</referenceTo>
        <relationshipLabel>BusinessMilestone_MilestoneSiteId_ma_rel</relationshipLabel>
        <relationshipName>rel_1731040466113_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>